2015-03-04  Roland McGrath  <roland@hack.frob.com>

	* nss/test-netdb.c: Don't #include <rpc/netdb.h>.
	(setdb): Don't call __nss_configure_lookup for "rpc".
	(do_test): Don't call test_rpc.
	(output_rpcent, test_rpc): Functions moved ...
	* sunrpc/test-rpcent.c: ... to this new file.
	* sunrpc/Makefile (tests): Add it.

	* nptl/tst-cancel4.c (tf_sigpause) [!SIGCANCEL]: Call pause instead of
	__xpg_sigpause.
	* nptl/tst-signal3.c: Conditionalize body on [SIGRTMIN].
	* nptl/tst-signal6.c: Likewise.
	* rt/tst-mqueue5.c: Conditionalize body on [SIGRTMIN && SA_SIGINFO].
	* rt/tst-timer4.c: Conditionalize body on [SA_SIGINFO].

	* configure.ac (libc_cv_cxx_link_ok): New check.
	Reset CXX to empty if it fails to link.
	* configure: Regenerated.
	* dlfcn/Makefile (tests, modules-names): Add bug-atexit3 and
	bug-atexit3-lib only if $(CXX) is nonempty.
	* nptl/Makefile (tests): Likewise for tst-cancel24.
	(tests, tests-static): Likewise for tst-cancel24-static.
	* debug/Makefile (tests): Likewise for tst-chk4, tst-chk5, tst-chk6,
	tst-lfschk4, tst-lfschk5, and tst-lfschk6.
	* elf/Makefile (tests, modules-names): Likewise for tst-unique3,
	tst-unique3lib, tst-unique3lib2, tst-unique4, and tst-unique4lib.

2015-03-04  Andreas Schwab  <schwab@suse.de>

	[BZ #17631]
	* string/string.h (__CORRECT_ISO_CPP_STRING_H_PROTO): Don't define
	for non-GCC compilers.
	* string/strings.h (__CORRECT_ISO_CPP_STRINGS_H_PROTO):
	Likewise.

2015-03-03 Adhemerval Zanellla  <azanella@linux.vnet.ibm.com>

	[BZ #17776]
	* sysdeps/powerpc/bits/fenvinline.h (feraiseexcept): Convert input to
	integer before bitwise and assembly operations.
	(feclearexcept): Likewise.
	* math/test-fenvinline.c: New file.
	* math/Makefile: Add test-fenvinline test.

2015-03-03  Alan Modra  <amodra@gmail.com>

	[BZ #16512]
	* scripts/localplt.awk: Strip off symbol version.
	* NEWS: Mention bug fix.

2015-03-02  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/pthread/timer_routines.c