@@ -1,5 +1,12 @@
 2015-03-04  Roland McGrath  <roland@hack.frob.com>
 
+	* Makeconfig (test-wrapper-env-only): New variable.
+	* Rules (make-test-out): If variable $*-ENV-only is nonempty,
+	then use that with $(test-wrapper-env-only) rather than using
+	$(test-wrapper-env) $(run-program-env) $($*-ENV).
+
+2015-03-04  Roland McGrath  <roland@hack.frob.com>
+
 	* nss/test-netdb.c: Don't #include <rpc/netdb.h>.
 	(setdb): Don't call __nss_configure_lookup for "rpc".
 	(do_test): Don't call test_rpc.
